<resources>
    <string name="app_name">SplitWallet</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Log out</string>

    <string name="no_expenses">No expenses yet</string>
    <string name="add_expense">Add expense</string>
    <string name="invite">Invite</string>
    <string name="leave_group">Leave group</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="user_avatar">User Avatar</string>
    <string name="user">User</string>
    <string name="user_gmail_com">user@gmail.com</string>

    <string name="created_at">Created: %s</string>
    <string name="owner">Owner: %s</string>
    <string name="error_load_group">Failed to load group details</string>
    <string name="invalid_auth">Invalid group or authentication</string>
    <string name="join_group">Join Group</string>
    <string name="create_group">Create Group</string>

    <string name="default_web_client_id">453151780108-05dj3jqu12bsjoppek8mdcortan6jj8f.apps.googleusercontent.com</string>

    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="back">Back</string>





</resources>